# jeevitha-safeai-platform

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_create_users.py  0002_create_emergency_tables.py  0003_create_location_history.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  pagination.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/routes/: __init__.py  auth.py  contacts.py  emergency.py  health.py  location.py  users.py
backend/app/api/v1/schemas/: __init__.py  auth.py  common.py  emergency.py  health.py  location.py
backend/app/application/: __init__.py
backend/app/application/use_cases/: __init__.py  add_contact.py  authenticate_user.py  get_event.py  get_location_history.py  list_contacts.py  record_location.py  register_user.py  trigger_sos.py  update_event_status.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/domain/: __init__.py  exceptions.py
backend/app/domain/entities/: __init__.py  emergency_contact.py  emergency_event.py  location_sample.py  user.py
backend/app/domain/repositories/: __init__.py  emergency_contact_repository.py  event_repository.py  location_repository.py  user_repository.py
backend/app/domain/services/: __init__.py  notifier.py  password_hasher.py
backend/app/domain/value_objects/: __init__.py  coordinates.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/db/: __init__.py  base.py  columns.py  session.py
backend/app/infrastructure/db/models/: __init__.py  emergency_contact.py  emergency_event.py  location_history.py  user.py
backend/app/infrastructure/db/repositories/: __init__.py  emergency_contact_repository.py  event_repository.py  location_repository.py  user_repository.py
backend/app/infrastructure/ml/: __init__.py
backend/app/infrastructure/notifications/: __init__.py  log_notifier.py
backend/app/infrastructure/security/: __init__.py  bcrypt_hasher.py  token_service.py
backend/tests/: conftest.py  fakes.py  test_auth.py  test_auth_use_cases.py  test_config.py  test_coordinates.py  test_database.py  test_emergency_api.py  test_emergency_event.py  test_emergency_repositories.py  test_emergency_use_cases.py  test_error_handlers.py  test_health.py  test_location_api.py  test_location_repository.py  test_location_use_cases.py  test_log_notifier.py  test_pagination.py  test_privacy_cascade.py  test_security.py  test_user_repository.py
docs/: api-contract.md  architecture.md  database-design.md  development-roadmap.md  glossary.md  security-design.md  technology-decisions.md  testing-strategy.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BackendStatus.tsx
frontend/src/lib/api/: client.ts  health.ts  types.ts
